--- a/proniaBackEnd/Views/_ViewImports.cshtml
+++ b/proniaBackEnd/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AuthoringTagHelpers
 @using proniaBackEnd.Entities
+@using proniaBackEnd.ViewModels
